cmake_minimum_required(VERSION 3.30)
project(Leetcode)

set(CMAKE_CXX_STANDARD 23)

add_executable(Leetcode
        Leetcode/src/Q1768MergeStringsAlternately.cpp
        Leetcode/src/Q1071GCDOfStrings.cpp
        Leetcode/src/Q1431KidsWithCandies.cpp
        Leetcode/src/Q605CanPlaceFlowers.cpp
        Leetcode/src/Q345ReverseVowelsOfAString.cpp
        Leetcode/src/Q151ReverseWordsInAString.cpp
        Leetcode/src/Q238ProductOfArrayExpectSelf.cpp
        Leetcode/src/Q334IncreasingTripletSubsequence.cpp
        Leetcode/src/Q443StringCompression.cpp
        Leetcode/src/Q283MoveZeros.cpp
        Leetcode/src/Q392IsSubsequence.cpp
        Leetcode/src/Q11ContainerWithMostWater.cpp
        Leetcode/src/Q1679MaxNumberOfKSumPairs.cpp
        Leetcode/src/Q643FindMaxAverageValue.cpp
        Leetcode/src/Q1456MaxVowels.cpp
        Leetcode/src/Q1004LongestOnes.cpp
        Leetcode/src/Q1493LongestSubarray.cpp
        Leetcode/src/Q1732LargestAltitude.cpp
        Leetcode/src/Q724PivotIndex.cpp
        Leetcode/src/Q2215FindDifference.cpp
        Leetcode/src/Q1207UniqueOccurences.cpp
        Leetcode/src/Q1657CloseString.cpp
        Leetcode/src/Q2352EqualPairs.cpp
        Leetcode/src/Q2390RemoveStars.cpp
        Leetcode/src/Q735AsteroidCollision.cpp)
