cmake_minimum_required(VERSION 3.30)
project(Leetcode)

set(CMAKE_CXX_STANDARD 23)

add_executable(Leetcode
        Leetcode/src/Q1768MergeStringsAlternately.cpp
        Leetcode/src/Q1071GCDOfStrings.cpp
        Leetcode/src/Q1431KidsWithCandies.cpp
        Leetcode/src/Q605CanPlaceFlowers.cpp
        Leetcode/src/Q345ReverseVowelsOfAString.cpp
        Leetcode/src/Q151ReverseWordsInAString.cpp
        Leetcode/src/Q238ProductOfArrayExpectSelf.cpp
        Leetcode/src/Q334IncreasingTripletSubsequence.cpp
        Leetcode/src/Q443StringCompression.cpp
        Leetcode/src/Q283MoveZeros.cpp
        Leetcode/src/Q392IsSubsequence.cpp
        Leetcode/src/Q11ContainerWithMostWater.cpp
        Leetcode/src/Q1679MaxNumberOfKSumPairs.cpp
        Leetcode/src/Q643FindMaxAverageValue.cpp
        Leetcode/src/Q1456MaxVowels.cpp
        Leetcode/src/Q1004LongestOnes.cpp
        Leetcode/src/Q1493LongestSubarray.cpp
        Leetcode/src/Q1732LargestAltitude.cpp
        Leetcode/src/Q724PivotIndex.cpp
        Leetcode/src/Q2215FindDifference.cpp
        Leetcode/src/Q1207UniqueOccurences.cpp
        Leetcode/src/Q1657CloseString.cpp
        Leetcode/src/Q2352EqualPairs.cpp
        Leetcode/src/Q2390RemoveStars.cpp
        Leetcode/src/Q735AsteroidCollision.cpp
        Leetcode/src/Q394DecodingString.cpp
        Leetcode/src/Q933recentCounterFree.c
        Leetcode/src/Q649PredictPartyVictory.cpp
        Leetcode/src/Q2095DeleteMiddle.cpp
        Leetcode/src/Q328OddEvenList.cpp
        Leetcode/src/Q206ReverseList.cpp
        Leetcode/src/Q2130PairSum.cpp
        Leetcode/src/Q104MaxDepth.cpp
        Leetcode/src/Q872LeafSimilar.cpp
        Leetcode/src/Q1448GoodNodes.cpp
        Leetcode/src/Q437PathSum.cpp
        Leetcode/src/Q1372LongestZigZag.cpp
        Leetcode/src/Q236LowestCommonAncestor.cpp
        Leetcode/src/Q199RightSideView.cpp
        Leetcode/src/Q1161MaxLevelSum.cpp
        Leetcode/src/Q700SearchBST.cpp
        Leetcode/src/Q450DeleteNode.cpp
        Leetcode/src/Q841CanVisitAllRoom.cpp
        Leetcode/src/Q547FindCircleNum.cpp
        Leetcode/src/Q1466MinReorder.cpp
)
