cmake_minimum_required(VERSION 3.20)
project(Leetcode)

set(CMAKE_CXX_STANDARD 23)

add_executable(Leetcode
        Leetcode/src/Q1768MergeStringsAlternately.cpp
        Leetcode/src/Q1071GCDOfStrings.cpp
        Leetcode/src/Q1431KidsWithCandies.cpp
        Leetcode/src/Q605CanPlaceFlowers.cpp
        Leetcode/src/Q345ReverseVowelsOfAString.cpp
        Leetcode/src/Q151ReverseWordsInAString.cpp
        Leetcode/src/Q238ProductOfArrayExpectSelf.cpp
        Leetcode/src/Q334IncreasingTripletSubsequence.cpp
        Leetcode/src/Q443StringCompression.cpp
        Leetcode/src/Q283MoveZeros.cpp
        Leetcode/src/Q392IsSubsequence.cpp
        Leetcode/src/Q11ContainerWithMostWater.cpp
        Leetcode/src/Q1679MaxNumberOfKSumPairs.cpp
        Leetcode/src/Q643FindMaxAverageValue.cpp
        Leetcode/src/Q1456MaxVowels.cpp
        Leetcode/src/Q1004LongestOnes.cpp
        Leetcode/src/Q1493LongestSubarray.cpp
        Leetcode/src/Q1732LargestAltitude.cpp
        Leetcode/src/Q724PivotIndex.cpp
        Leetcode/src/Q2215FindDifference.cpp
        Leetcode/src/Q1207UniqueOccurences.cpp
        Leetcode/src/Q1657CloseString.cpp
        Leetcode/src/Q2352EqualPairs.cpp
        Leetcode/src/Q2390RemoveStars.cpp
        Leetcode/src/Q735AsteroidCollision.cpp
        Leetcode/src/Q394DecodingString.cpp
        Leetcode/src/Q933recentCounterFree.c
        Leetcode/src/Q649PredictPartyVictory.cpp
        Leetcode/src/Q2095DeleteMiddle.cpp
        Leetcode/src/Q328OddEvenList.cpp
        Leetcode/src/Q206ReverseList.cpp
        Leetcode/src/Q2130PairSum.cpp
        Leetcode/src/Q104MaxDepth.cpp
        Leetcode/src/Q872LeafSimilar.cpp
        Leetcode/src/Q1448GoodNodes.cpp
        Leetcode/src/Q437PathSum.cpp
        Leetcode/src/Q1372LongestZigZag.cpp
        Leetcode/src/Q236LowestCommonAncestor.cpp
        Leetcode/src/Q199RightSideView.cpp
        Leetcode/src/Q1161MaxLevelSum.cpp
        Leetcode/src/Q700SearchBST.cpp
        Leetcode/src/Q450DeleteNode.cpp
        Leetcode/src/Q841CanVisitAllRoom.cpp
        Leetcode/src/Q547FindCircleNum.cpp
        Leetcode/src/Q1466MinReorder.cpp
        Leetcode/src/Q399CalcEquation.cpp
        Leetcode/src/Q1926NearestExit.cpp
        Leetcode/src/Q994OrangesRotting.cpp
        Leetcode/src/Q215FindKthLargest.cpp
        Leetcode/src/Q2336SmallestInfiniteSet.cpp
        Leetcode/src/Q33Search.cpp
        Leetcode/src/Q2598FindSmallestInteger.cpp
        Leetcode/src/Q2598FindSmallestInteger.cpp
        Leetcode/src/Q121MaxProfit.cpp
        Leetcode/src/Q121MaxProfit.cpp
        Leetcode/src/Q146LRUCache.cpp
        Leetcode/src/Q743NetworkDelayTime.cpp
        Leetcode/src/Q2542MaxScore.cpp
        Leetcode/src/Q2462TotalCost.cpp
        Leetcode/src/Q374GuessNumber.cpp
        Leetcode/src/Q2300SuccessfulPairs.cpp
        Leetcode/src/Q162FindPeakElement.cpp
        Leetcode/src/Q1137Tribonacci.cpp
        Leetcode/src/QMinCostClimbingStairs.cpp
        Leetcode/src/Q198Rob.cpp
        Leetcode/src/Q790NumTilings.cpp
        Leetcode/src/Q62UniquePath.cpp
        Leetcode/src/Q875MinEatingSpeed.cpp
        Leetcode/src/Q17LetterCombinations.cpp
        Leetcode/src/Q216CombinationSum3.cpp
        Leetcode/src/Q338CountBits.cpp
        Leetcode/src/Q1143LongestCommonSubsequence.cpp
        Leetcode/src/Q714MaxProfit.cpp
        Leetcode/src/Q72MinDistance.cpp
        Leetcode/src/Q136SingleNumber.cpp
        Leetcode/src/Q1318MinFlips.cpp
        Leetcode/src/Q208Trie.cpp
        Leetcode/src/Q1268SuggestedProducts.cpp
        Leetcode/src/Q435EraseOverlapIntervals.cpp
        Leetcode/src/Q452FindMinArrowShots.cpp
        Leetcode/src/Q739DailyTempratures.cpp
        Leetcode/src/Q901StockSpanner.cpp
        Leetcode/src/Q88Merge.cpp
        Leetcode/src/Q27RemoveElement.cpp
        Leetcode/src/Q26RemoveDuplicates.cpp
        Leetcode/src/Q80RemoveDuplicates.cpp
        Leetcode/src/Q169MajorityElement.cpp
        Leetcode/src/Q189RotateArray.cpp
        Leetcode/src/Q122MaxProfit.cpp
        Leetcode/src/Q55CanJump.cpp
        Leetcode/src/Q45Jump.cpp
        Leetcode/src/Q274HIndex.cpp
        Leetcode/src/Q380RandomizedSet.cpp
        Leetcode/src/Q134CanCompleteCircuit.cpp
        Leetcode/src/Q135Candy.cpp
)
